--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   percent_indicator: ^3.4.0
   date_time_picker: ^2.1.0
   open_file:
+  file_icon: ^1.0.0
+
 
 
 
@@ -81,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
