--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   screenshot: ^1.2.3
   path_provider: ^2.0.7
   file_utils: ^0.1.3
+  photo_view: ^0.13.0
+  uri_to_file: ^0.1.3
 
 
 
